3DS: Enable L2 cache on n3DS

--- a/src/platform/3ds/cia.rsf.in
+++ b/src/platform/3ds/cia.rsf.in
@@ -92,6 +92,7 @@ AccessControlInfo:
    
   MaxCpu                        : 0x9E # Default
   CpuSpeed                      : 804mhz
+  EnableL2Cache                 : true
   
   DisableDebug                  : true
   EnableForceDebug              : false
