GB: First pass at audio refactor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,6 @@ set(USE_LIBZIP ON CACHE BOOL "Whether or not to enable LIBZIP support")
 set(USE_MAGICK ON CACHE BOOL "Whether or not to enable ImageMagick support")
 set(M_CORE_GBA ON CACHE BOOL "Build Game Boy Advance core")
 set(M_CORE_GB ON CACHE BOOL "Build Game Boy core")
-set(USE_BLIP ON CACHE BOOL "Whether or not to enable blip_buf support")
 set(USE_LZMA ON CACHE BOOL "Whether or not to enable 7-Zip support")
 set(BUILD_QT ON CACHE BOOL "Build Qt frontend")
 set(BUILD_SDL ON CACHE BOOL "Build SDL frontend")
@@ -362,12 +361,7 @@ if(USE_FFMPEG)
 	endif()
 endif()
 
-if(USE_BLIP)
-	list(APPEND THIRD_PARTY_SRC "${CMAKE_SOURCE_DIR}/src/third-party/blip_buf/blip_buf.c")
-	add_definitions(-DRESAMPLE_LIBRARY=RESAMPLE_BLIP_BUF)
-else()
-	add_definitions(-DRESAMPLE_LIBRARY=RESAMPLE_NN)
-endif()
+list(APPEND THIRD_PARTY_SRC "${CMAKE_SOURCE_DIR}/src/third-party/blip_buf/blip_buf.c")
 
 if(USE_MAGICK)
 	list(APPEND FEATURES MAGICK)
@@ -515,6 +509,9 @@ if(M_CORE_GBA)
 		${GBA_CTX_SRC}
 		${DEBUGGER_SRC}
 		${GBA_RENDERER_SRC})
+	if(NOT M_CORE_GB)
+		list(APPEND CORE_SRC ${CMAKE_SOURCE_DIR}/src/gb/audio.c)
+	endif()
 endif()
 
 list(APPEND CORE_SRC
@@ -702,7 +699,6 @@ message(STATUS "	GIF recording: ${USE_MAGICK}")
 message(STATUS "	Screenshot/advanced savestate support: ${USE_PNG}")
 message(STATUS "	ZIP support: ${SUMMARY_ZIP}")
 message(STATUS "	7-Zip support: ${USE_LZMA}")
-message(STATUS "	Better audio resampling: ${USE_BLIP}")
 message(STATUS "	OpenGL support: ${SUMMARY_GL}")
 message(STATUS "Frontends:")
 message(STATUS "	Qt: ${BUILD_QT}")
