--- a/libretro-build/Makefile.common
+++ b/libretro-build/Makefile.common
@@ -59,6 +59,8 @@ SOURCES_C :=   $(CORE_DIR)/src/arm/arm.c \
 					$(CORE_DIR)/src/gba/renderers/software-bg.c \
 					$(CORE_DIR)/src/gba/renderers/video-software.c \
 					$(CORE_DIR)/src/gba/context/overrides.c \
+					$(CORE_DIR)/src/lr35902/isa-lr35902.c \
+					$(CORE_DIR)/src/lr35902/lr35902.c \
 					$(CORE_DIR)/src/platform/libretro/memory.c \
 					$(CORE_DIR)/src/platform/libretro/libretro.c \
 					$(CORE_DIR)/src/third-party/inih/ini.c \
