Perf: De-threadify and make compatible with 3DS

--- a/src/platform/3ds/CMakeLists.txt
+++ b/src/platform/3ds/CMakeLists.txt
@@ -14,8 +14,9 @@ set(OS_DEFINES COLOR_16_BIT COLOR_5_6_5 IOAPI_NO_64)
 
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 list(APPEND OS_LIB ctru)
-file(GLOB OS_SRC ${CMAKE_CURRENT_SOURCE_DIR}/3ds-*.c)
+file(GLOB OS_SRC ${CMAKE_CURRENT_SOURCE_DIR}/3ds-*.c ${CMAKE_CURRENT_SOURCE_DIR}/ctru-heap.c)
 set(OS_SRC ${OS_SRC} PARENT_SCOPE)
+set(OS_LIB ${OS_LIB} PARENT_SCOPE)
 source_group("3DS-specific code" FILES ${OS_SRC})
 
 if(USE_VFS_3DS)
@@ -45,7 +46,7 @@ set_source_files_properties(
 	${CMAKE_CURRENT_BINARY_DIR}/uishader.h
 	${CMAKE_CURRENT_BINARY_DIR}/uishader.shbin.h
 	PROPERTIES GENERATED ON)
-add_executable(${BINARY_NAME}.elf ${GUI_SRC} main.c ctru-heap.c)
+add_executable(${BINARY_NAME}.elf ${GUI_SRC} main.c)
 set_target_properties(${BINARY_NAME}.elf PROPERTIES COMPILE_DEFINITIONS "${OS_DEFINES};${FEATURE_DEFINES};${FUNCTION_DEFINES}")
 target_link_libraries(${BINARY_NAME}.elf ${BINARY_NAME} ${M_LIBRARY} ${OS_LIB})
 
@@ -92,6 +93,12 @@ add_custom_target(${BINARY_NAME}.cia ALL
 
 add_custom_target(run ${3DSLINK} ${CMAKE_CURRENT_BINARY_DIR}/${BINARY_NAME}.3dsx
                   DEPENDS ${BINARY_NAME}.3dsx)
+
+if(BUILD_PERF)
+	add_custom_target(${BINARY_NAME}-perf.3dsx ALL
+	                  ${3DSXTOOL} ../${BINARY_NAME}-perf ${BINARY_NAME}-perf.3dsx --smdh=${BINARY_NAME}.smdh
+	                  DEPENDS ${BINARY_NAME}-perf ${BINARY_NAME}.smdh)
+endif()
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/cia.rsf.in ${CMAKE_CURRENT_BINARY_DIR}/cia.rsf)
 install(FILES
