All: Allow use of external minizip library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ set(USE_CLI_DEBUGGER ON CACHE BOOL "Whether or not to enable the CLI-mode ARM de
 set(USE_GDB_STUB ON CACHE BOOL "Whether or not to enable the GDB stub ARM debugger")
 set(USE_FFMPEG ON CACHE BOOL "Whether or not to enable FFmpeg support")
 set(USE_ZLIB ON CACHE BOOL "Whether or not to enable zlib support")
+set(USE_MINIZIP ON CACHE BOOL "Whether or not to enable external minizip support")
 set(USE_PNG ON CACHE BOOL "Whether or not to enable PNG support")
 set(USE_LIBZIP ON CACHE BOOL "Whether or not to enable LIBZIP support")
 set(USE_MAGICK ON CACHE BOOL "Whether or not to enable ImageMagick support")
@@ -305,6 +306,7 @@ set(WANT_LIBZIP ${USE_LIBZIP})
 
 find_feature(USE_FFMPEG "libavcodec;libavformat;libavresample;libavutil;libswscale")
 find_feature(USE_ZLIB "ZLIB")
+find_feature(USE_MINIZIP "minizip")
 find_feature(USE_PNG "PNG")
 find_feature(USE_LIBZIP "libzip")
 find_feature(USE_MAGICK "MagickWand")
@@ -429,6 +431,13 @@ if(USE_LIBZIP)
 	list(APPEND FEATURES LIBZIP)
 	list(APPEND VFS_SRC ${CMAKE_SOURCE_DIR}/src/util/vfs/vfs-zip.c)
 	set(CPACK_DEBIAN_PACKAGE_DEPENDS "${CPACK_DEBIAN_PACKAGE_DEPENDS},libzip2")
+elseif(USE_MINIZIP)
+	include_directories(AFTER ${MINIZIP_INCLUDE_DIRS})
+	link_directories(${MINIZIP_LIBRARY_DIRS})
+	list(APPEND DEPENDENCY_LIB ${MINIZIP_LIBRARIES})
+	list(APPEND FEATURES MINIZIP)
+	list(APPEND VFS_SRC ${CMAKE_SOURCE_DIR}/src/util/vfs/vfs-zip.c)
+	set(CPACK_DEBIAN_PACKAGE_DEPENDS "${CPACK_DEBIAN_PACKAGE_DEPENDS},libminizip1")
 elseif(USE_ZLIB)
 	list(APPEND VFS_SRC ${CMAKE_SOURCE_DIR}/src/util/vfs/vfs-zip.c
 		${CMAKE_SOURCE_DIR}/src/third-party/zlib/contrib/minizip/ioapi.c
@@ -687,8 +696,10 @@ else()
 endif()
 if(USE_LIBZIP)
 	set(SUMMARY_ZIP libzip)
+elseif(USE_MINIZIP)
+	set(SUMMARY_ZIP "minizip (external)")
 elseif(USE_ZLIB)
-	set(SUMMARY_ZIP minizip)
+	set(SUMMARY_ZIP "minizip (included)")
 else()
 	set(SUMMARY_ZIP OFF)
 endif()
