All: Add QUIET parameter to silence CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -722,29 +722,31 @@ else()
 	set(SUMMARY_ZIP OFF)
 endif()
 
-message(STATUS "Platforms:")
-message(STATUS "	Game Boy Advance: ${M_CORE_GBA}")
-message(STATUS "	Game Boy: ${M_CORE_GB}")
-message(STATUS "Features:")
-message(STATUS "	CLI debugger: ${USE_CLI_DEBUGGER}")
-message(STATUS "	GDB stub: ${USE_GDB_STUB}")
-message(STATUS "	Video recording: ${USE_FFMPEG}")
-message(STATUS "	GIF recording: ${USE_MAGICK}")
-message(STATUS "	Screenshot/advanced savestate support: ${USE_PNG}")
-message(STATUS "	ZIP support: ${SUMMARY_ZIP}")
-message(STATUS "	7-Zip support: ${USE_LZMA}")
-message(STATUS "	OpenGL support: ${SUMMARY_GL}")
-message(STATUS "Frontends:")
-message(STATUS "	Qt: ${BUILD_QT}")
-message(STATUS "	SDL (${SDL_VERSION}): ${BUILD_SDL}")
-message(STATUS "	Profiling: ${BUILD_PERF}")
-message(STATUS "	Test harness: ${BUILD_TEST}")
-message(STATUS "	Examples: ${BUILD_EXAMPLE}")
-message(STATUS "Cores:")
-message(STATUS "	Libretro core: ${BUILD_LIBRETRO}")
-if(APPLE)
-	message(STATUS "	OpenEmu core: ${BUILD_OPENEMU}")
+if(NOT QUIET)
+	message(STATUS "Platforms:")
+	message(STATUS "	Game Boy Advance: ${M_CORE_GBA}")
+	message(STATUS "	Game Boy: ${M_CORE_GB}")
+	message(STATUS "Features:")
+	message(STATUS "	CLI debugger: ${USE_CLI_DEBUGGER}")
+	message(STATUS "	GDB stub: ${USE_GDB_STUB}")
+	message(STATUS "	Video recording: ${USE_FFMPEG}")
+	message(STATUS "	GIF recording: ${USE_MAGICK}")
+	message(STATUS "	Screenshot/advanced savestate support: ${USE_PNG}")
+	message(STATUS "	ZIP support: ${SUMMARY_ZIP}")
+	message(STATUS "	7-Zip support: ${USE_LZMA}")
+	message(STATUS "	OpenGL support: ${SUMMARY_GL}")
+	message(STATUS "Frontends:")
+	message(STATUS "	Qt: ${BUILD_QT}")
+	message(STATUS "	SDL (${SDL_VERSION}): ${BUILD_SDL}")
+	message(STATUS "	Profiling: ${BUILD_PERF}")
+	message(STATUS "	Test harness: ${BUILD_TEST}")
+	message(STATUS "	Examples: ${BUILD_EXAMPLE}")
+	message(STATUS "Cores:")
+	message(STATUS "	Libretro core: ${BUILD_LIBRETRO}")
+	if(APPLE)
+		message(STATUS "	OpenEmu core: ${BUILD_OPENEMU}")
+	endif()
+	message(STATUS "Libraries:")
+	message(STATUS "	Static: ${BUILD_STATIC}")
+	message(STATUS "	Shared: ${BUILD_SHARED}")
 endif()
-message(STATUS "Libraries:")
-message(STATUS "	Static: ${BUILD_STATIC}")
-message(STATUS "	Shared: ${BUILD_SHARED}")
