All: Update libzip dependencies on Ubuntu

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -428,7 +428,14 @@ if(USE_LIBZIP)
 	list(APPEND DEPENDENCY_LIB ${LIBZIP_LIBRARIES})
 	list(APPEND FEATURES LIBZIP)
 	list(APPEND VFS_SRC ${CMAKE_SOURCE_DIR}/src/util/vfs/vfs-zip.c)
-	set(CPACK_DEBIAN_PACKAGE_DEPENDS "${CPACK_DEBIAN_PACKAGE_DEPENDS},libzip2")
+	string(REGEX MATCH "^[0-9]+" LIBZIP_VERSION_MAJOR ${libzip_VERSION})
+	if (LIBZIP_VERSION_MAJOR LESS 1)
+		set(CPACK_DEBIAN_PACKAGE_DEPENDS "${CPACK_DEBIAN_PACKAGE_DEPENDS},libzip2")
+	elseif(LIBZIP_VERSION_MAJOR EQUAL 1)
+		set(CPACK_DEBIAN_PACKAGE_DEPENDS "${CPACK_DEBIAN_PACKAGE_DEPENDS},libzip4")
+	else()
+		message(AUTHOR_WARNING Unknown version of libzip detected: ${libzip_VERSION})
+	endif()
 elseif(USE_MINIZIP)
 	include_directories(AFTER ${MINIZIP_INCLUDE_DIRS})
 	link_directories(${MINIZIP_LIBRARY_DIRS})
