PSP2: Add LiveArea branding

--- a/src/platform/psp2/CMakeLists.txt
+++ b/src/platform/psp2/CMakeLists.txt
@@ -58,8 +58,16 @@ add_custom_target(eboot.bin
                   ${MAKE_FSELF} ${BINARY_NAME}.velf eboot.bin
                   DEPENDS ${BINARY_NAME}.velf)
 
+add_custom_target(livearea
+                  ${CMAKE_COMMAND} -E make_directory sce_sys/livearea/contents
+                  COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/icon0.png sce_sys
+                  COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/template.xml sce_sys/livearea/contents
+                  COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/bg.png sce_sys/livearea/contents
+                  COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/startup.png sce_sys/livearea/contents
+                  DEPENDS sce_sys)
+
 add_custom_target(${BINARY_NAME}.vpk ALL
                   zip -r ${BINARY_NAME}.vpk sce_sys eboot.bin
-                  DEPENDS eboot.bin head.bin param.sfo)
+                  DEPENDS livearea eboot.bin head.bin param.sfo)
 
 install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${BINARY_NAME}.velf DESTINATION . COMPONENT ${BINARY_NAME}-psp2)
