--- a/src/platform/3ds/cia.rsf.in
+++ b/src/platform/3ds/cia.rsf.in
@@ -1,121 +1,93 @@
 BasicInfo:
   Title                   : "${PROJECT_NAME}"
-  CompanyCode             : "00"
   ProductCode             : "CTR-P-MGBA"
-  ContentType             : Application
-  Logo                    : Nintendo # Nintendo / Licensed / Distributed / iQue / iQueForSystem
+  Logo                    : Homebrew # Nintendo / Licensed / Distributed / iQue / iQueForSystem / Homebrew
 
-#Rom:
-  # Specifies the root path of the file system to include in the ROM.
-  # HostRoot                : "romfs"
-
+#RomFs:
+  # Specifies the root path of the read only file system to include in the ROM.
+  #RootPath                : romfs
 
 TitleInfo:
-  UniqueId                : 0x1A1E
   Category                : Application
-
-CardInfo:
-  MediaSize               : 128MB # 128MB / 256MB / 512MB / 1GB / 2GB / 4GB / 8GB / 16GB / 32GB
-  MediaType               : Card1 # Card1 / Card2
-  CardDevice              : None # NorFlash(Pick this if you use savedata) / None
-  
+  UniqueId                : 0x1A1E
 
 Option:
   UseOnSD                 : true # true if App is to be installed to SD
   FreeProductCode         : true # Removes limitations on ProductCode
   MediaFootPadding        : false # If true CCI files are created with padding
   EnableCrypt             : false # Enables encryption for NCCH and CIA
-  EnableCompress          : true # Compresses exefs code
+  EnableCompress          : true # Compresses where applicable (currently only exefs:/.code)
 
-ExeFs: # these are the program segments from the ELF, check your elf for the appropriate segment names
-  ReadOnly: 
-   - .rodata
-   - RO
-  ReadWrite: 
-   - .data
-   - RO
-  Text: 
-   - .init
-   - .text
-   - STUP_ENTRY
-   
-PlainRegion: # only used with SDK ELFs 
- # - .module_id
-  
 AccessControlInfo:
-  # UseOtherVariationSaveData : true
-  # UseExtSaveData : true
-  # ExtSaveDataId: 0xffffffff
-  # SystemSaveDataId1: 0x220
-  # SystemSaveDataId2: 0x00040010
-  # OtherUserSaveDataId1: 0x220
-  # OtherUserSaveDataId2: 0x330
-  # OtherUserSaveDataId3: 0x440
-  # UseExtendedSaveDataAccessControl: true
-  # AccessibleSaveDataIds: [0x101, 0x202, 0x303, 0x404, 0x505, 0x606]
-  FileSystemAccess:
-   # - CategorySystemApplication
-   # - CategoryHardwareCheck
-   # - CategoryFileSystemTool
-   - Debug
-   # - TwlCardBackup
-   # - TwlNandData
-   # - Boss
-   - DirectSdmc
-   # - Core
-   # - CtrNandRo
-   # - CtrNandRw
-   # - CtrNandRoWrite
-   # - CategorySystemSettings
-   # - CardBoard
-   # - ExportImportIvs
-   # - DirectSdmcWrite
-   # - SwitchCleanup
-   # - SaveDataMove
-   # - Shop
-   # - Shell
-   # - CategoryHomeMenu
-  IoAccessControl:
-   # - FsMountNand
-   # - FsMountNandRoWrite
-   # - FsMountTwln
-   # - FsMountWnand
-   # - FsMountCardSpi
-   # - UseSdif3
-   # - CreateSeed
-   # - UseCardSpi
-   
-  IdealProcessor                : 0
-  AffinityMask                  : 1
-  
-  Priority                      : 16
-   
-  MaxCpu                        : 0x9E # Default
-  CpuSpeed                      : 804mhz
-  EnableL2Cache                 : true
-  
-  DisableDebug                  : true
-  EnableForceDebug              : false
-  CanWriteSharedPage            : true
-  CanUsePrivilegedPriority      : false
-  CanUseNonAlphabetAndNumber    : true
-  PermitMainFunctionArgument    : true
-  CanShareDeviceMemory          : true
-  RunnableOnSleep               : false
-  SpecialMemoryArrange          : true
-  
   CoreVersion                   : 2
+
+  # Exheader Format Version
   DescVersion                   : 2
-  
+
+  # Minimum Required Kernel Version (below is for 4.5.0)
   ReleaseKernelMajor            : "02"
   ReleaseKernelMinor            : "33" 
-  MemoryType                    : Application # Application / System / Base
-  HandleTableSize: 512
-  IORegisterMapping: 
-   - 1ff50000-1ff57fff
-   - 1ff70000-1ff77fff
+
+  # ExtData
+  UseExtSaveData                : false # enables ExtData       
+  #ExtSaveDataId                : 0x300 # only set this when the ID is different to the UniqueId
+
+  # FS:USER Archive Access Permissions
+  # Uncomment as required
+  FileSystemAccess:
+   #- CategorySystemApplication
+   #- CategoryHardwareCheck
+   #- CategoryFileSystemTool
+   #- Debug
+   #- TwlCardBackup
+   #- TwlNandData
+   #- Boss
+   - DirectSdmc
+   #- Core
+   #- CtrNandRo
+   #- CtrNandRw
+   #- CtrNandRoWrite
+   #- CategorySystemSettings
+   #- CardBoard
+   #- ExportImportIvs
+   #- DirectSdmcWrite
+   #- SwitchCleanup
+   #- SaveDataMove
+   #- Shop
+   #- Shell
+   #- CategoryHomeMenu
+
+  # Process Settings
+  MemoryType                    : Application # Application/System/Base
+  SystemMode                    : 64MB # 64MB(Default)/96MB/80MB/72MB/32MB
+  IdealProcessor                : 0
+  AffinityMask                  : 1
+  Priority                      : 16
+  MaxCpu                        : 0 # Let system decide
+  HandleTableSize               : 0x200
+  DisableDebug                  : true
+  EnableForceDebug              : false
+  CanWriteSharedPage            : false
+  CanUsePrivilegedPriority      : false
+  CanUseNonAlphabetAndNumber    : false
+  PermitMainFunctionArgument    : true
+  CanShareDeviceMemory          : false
+  RunnableOnSleep               : false
+  SpecialMemoryArrange          : false
+
+  # New3DS Exclusive Process Settings
+  SystemModeExt                 : 124MB # Legacy(Default)/124MB/178MB  Legacy:Use Old3DS SystemMode
+  CpuSpeed                      : 804MHz # 268MHz(Default)/804MHz
+  EnableL2Cache                 : true # false(default)/true
+  CanAccessCore2                : true
+
+  # Virtual Address Mappings
+  IORegisterMapping:
+   - 1ff00000-1ff7ffff   # DSP memory
   MemoryMapping: 
-   - 1f000000-1f5fffff:r
+   - 1f000000-1f5fffff:r # VRAM
+
+  # Accessible SVCs, <Name>:<ID>
   SystemCallAccess: 
     ArbitrateAddress: 34
     Break: 60
@@ -168,8 +140,11 @@ AccessControlInfo:
     UnmapMemoryBlock: 32
     WaitSynchronization1: 36
     WaitSynchronizationN: 37
-  InterruptNumbers:
-  ServiceAccessControl: 
+    ControlProcessMemory: 112
+
+  # Service List
+  # Maximum 34 services (32 if firmware is prior to 9.3.0)
+  ServiceAccessControl:
    - APT:U
    - $hioFIO
    - $hostio0
@@ -200,13 +175,18 @@ AccessControlInfo:
    - ir:USER
    - ir:u
    - csnd:SND
-  
-   
+
+
 SystemControlInfo:
-  SaveDataSize: 0KB # It doesn't use any save data.
-  RemasterVersion: 2
+  SaveDataSize: 0K
+  RemasterVersion: 0
   StackSize: 0x40000
-  # JumpId: 0
+
+  # Modules that run services listed above should be included below
+  # Maximum 48 dependencies
+  # If a module is listed that isn't present on the 3DS, the title will get stuck at the logo (3ds waves)
+  # So act, nfc and qtm are commented for 4.x support. Uncomment if you need these.
+  # <module name>:<module titleid>
   Dependency: 
     ac: 0x0004013000002402L
     am: 0x0004013000001502L
