--- a/src/platform/psp2/template.xml.in
+++ b/src/platform/psp2/template.xml.in
@@ -8,4 +8,12 @@
 	<gate>
 		<startup-image>startup.png</startup-image>
 	</gate>
+
+	<frame id="frame3">
+		<liveitem>
+			<text origin="background" align="right" y="-250" margin-right="5">
+				<str size="18" shadow="on" color="#ffffff">${VERSION_STRING}</str>
+			</text>
+		</liveitem>
+	</frame>
 </livearea>
