Qt: Fix translation interface

--- a/src/platform/qt/CMakeLists.txt
+++ b/src/platform/qt/CMakeLists.txt
@@ -189,13 +189,18 @@ endif()
 find_package(Qt5LinguistTools)
 if(Qt5LinguistTools_FOUND)
 	set(TRANSLATION_FILES)
-	file(GLOB TS_FILES ts/*.ts)
+	set(TRANSLATION_QRC "${CMAKE_CURRENT_BINARY_DIR}/ts.qrc")
+	file(GLOB TS_FILES "${CMAKE_CURRENT_SOURCE_DIR}/ts/${BINARY_NAME}-*.ts")
 	if(UPDATE_TRANSLATIONS)
 		qt5_create_translation(TRANSLATION_FILES ${SOURCE_FILES} ${UI_FILES} ${TS_FILES})
 	else()
 		qt5_add_translation(TRANSLATION_FILES ${TS_FILES})
 	endif()
-	list(APPEND RESOURCES ${TRANSLATION_FILES})
+	add_custom_command(OUTPUT ${TRANSLATION_QRC}
+		               COMMAND ${CMAKE_COMMAND} -DTRANSLATION_QRC:FILEPATH="${TRANSLATION_QRC}" -DTRANSLATION_FILES="${TRANSLATION_FILES}" -P "${CMAKE_CURRENT_SOURCE_DIR}/ts.cmake"
+		               DEPENDS ${TRANSLATION_FILES})
+	qt5_add_resources(TRANSLATION_RESOURCES ${TRANSLATION_QRC})
+	list(APPEND RESOURCES ${TRANSLATION_RESOURCES})
 endif()
 
 add_executable(${BINARY_NAME}-qt WIN32 MACOSX_BUNDLE main.cpp ${CMAKE_SOURCE_DIR}/res/mgba.icns ${SOURCE_FILES} ${PLATFORM_SRC} ${UI_FILES} ${AUDIO_SRC} ${RESOURCES})
