--- a/libretro-build/Makefile.common
+++ b/libretro-build/Makefile.common
@@ -37,7 +37,10 @@ SOURCES_C :=   $(CORE_DIR)/src/arm/arm.c \
 					$(CORE_DIR)/src/gb/core.c \
 					$(CORE_DIR)/src/gb/gb.c \
 					$(CORE_DIR)/src/gb/io.c \
+					$(CORE_DIR)/src/gb/mbc.c \
 					$(CORE_DIR)/src/gb/memory.c \
+					$(CORE_DIR)/src/gb/overrides.c \
+					$(CORE_DIR)/src/gb/sio.c \
 					$(CORE_DIR)/src/gb/timer.c \
 					$(CORE_DIR)/src/gb/video.c \
 					$(CORE_DIR)/src/gb/renderers/software.c \
