Qt: qwindows depends on Qt5PlatformSupport

--- a/src/platform/qt/CMakeLists.txt
+++ b/src/platform/qt/CMakeLists.txt
@@ -186,7 +186,7 @@ if(WIN32)
 	configure_file(${CMAKE_SOURCE_DIR}/res/mgba.rc.in ${CMAKE_BINARY_DIR}/res/mgba.rc)
 	list(APPEND RESOURCES ${CMAKE_BINARY_DIR}/res/mgba.rc)
 	if(QT_STATIC)
-		list(APPEND QT_LIBRARIES qwindows imm32)
+		list(APPEND QT_LIBRARIES qwindows Qt5PlatformSupport imm32)
 	endif()
 endif()
 if(NOT DEFINED DATADIR)
