--- a/libretro-build/Makefile.common
+++ b/libretro-build/Makefile.common
@@ -32,6 +32,7 @@ SOURCES_C :=   $(CORE_DIR)/src/arm/arm.c \
 					$(CORE_DIR)/src/core/sync.c \
 					$(CORE_DIR)/src/core/thread.c \
 					$(CORE_DIR)/src/debugger/debugger.c \
+                                        $(CORE_DIR)/src/arm/debugger/debugger.c \
 					$(CORE_DIR)/src/arm/debugger/memory-debugger.c \
 					$(CORE_DIR)/src/gb/audio.c \
 					$(CORE_DIR)/src/gb/core.c \
@@ -53,10 +54,13 @@ SOURCES_C :=   $(CORE_DIR)/src/arm/arm.c \
 					$(CORE_DIR)/src/gba/audio.c \
 					$(CORE_DIR)/src/gba/memory.c \
 					$(CORE_DIR)/src/core/cheats.c \
+					$(CORE_DIR)/src/gb/cheats.c \
+					$(CORE_DIR)/src/gb/serialize.c \
 					$(CORE_DIR)/src/gba/cheats.c \
 					$(CORE_DIR)/src/gba/cheats/gameshark.c \
 					$(CORE_DIR)/src/gba/cheats/parv3.c \
 					$(CORE_DIR)/src/gba/cheats/codebreaker.c \
+                                        $(CORE_DIR)/src/lr35902/debugger/debugger.c \
 					$(CORE_DIR)/src/gba/core.c \
 					$(CORE_DIR)/src/gba/gba.c \
 					$(CORE_DIR)/src/gba/hardware.c \
