--- a/libretro-build/Makefile.common
+++ b/libretro-build/Makefile.common
@@ -92,6 +92,10 @@ SOURCES_C :=   $(CORE_DIR)/src/arm/arm.c \
 					$(CORE_DIR)/src/third-party/blip_buf/blip_buf.c \
 					$(CORE_DIR)/src/util/crc32.c
 
+ifeq ($(platform), ctr)
+SOURCES_C += $(CORE_DIR)/src/platform/3ds/ctru-heap.c
+endif
+
 ifeq ($(HAVE_NEON),1)
 SOURCES_ASM += $(CORE_DIR)/src/util/arm-algo.S
 endif
