--- a/libretro-build/Makefile.android_armeabi
+++ b/libretro-build/Makefile.android_armeabi
@@ -44,7 +44,7 @@ PLATLDXFLAGS   = -shared --sysroot=$(NDK_ROOT_DIR)/platforms/android-3/arch-arm 
 ################
 # libretro setup
 
-RETRODEFS     = -D__LIBRETRO__ -DMINIMAL_CORE=2
+#RETRODEFS     = -D__LIBRETRO__ -DMINIMAL_CORE=2
 RETROCFLAGS   =
 RETROCXXFLAGS =
 RETROLDFLAGS  =
