--- a/libretro-build/Makefile.android_mips
+++ b/libretro-build/Makefile.android_mips
@@ -44,7 +44,7 @@ PLATLDXFLAGS   = -shared --sysroot=$(NDK_ROOT_DIR)/platforms/android-9/arch-mips
 ################
 # libretro setup
 
-RETRODEFS     = -D__LIBRETRO__ -DMINIMAL_CORE=2
+#RETRODEFS     = -D__LIBRETRO__ -DMINIMAL_CORE=2
 RETROCFLAGS   =
 RETROCXXFLAGS =
 RETROLDFLAGS  =
