Revert "Qt: Fix dependencies for translation files"
This reverts commit c1df4dcf9f82c7485f40ec1a501d70e7d4a3c8f4.

--- a/src/platform/qt/CMakeLists.txt
+++ b/src/platform/qt/CMakeLists.txt
@@ -214,7 +214,7 @@ if(Qt5LinguistTools_FOUND)
 	endif()
 	add_custom_command(OUTPUT ${TRANSLATION_QRC}
 		               COMMAND ${CMAKE_COMMAND} -DTRANSLATION_QRC:FILEPATH="${TRANSLATION_QRC}" -DTRANSLATION_FILES="${TRANSLATION_FILES}" -P "${CMAKE_CURRENT_SOURCE_DIR}/ts.cmake"
-		               DEPENDS ${TS_FILES})
+		               DEPENDS ${TRANSLATION_FILES})
 	qt5_add_resources(TRANSLATION_RESOURCES ${TRANSLATION_QRC})
 	list(APPEND RESOURCES ${TRANSLATION_RESOURCES})
 endif()
